--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "vue": "2.7.14",
     "vue-clickaway": "2.2.2",
     "vue-notifyjs": "0.3.0",
-    "vue-router": "3.0.1"
+    "vue-router": "3.0.1",
+    "vue-tailwind": "^2.5.1",
+    "vuesax": "^3.12.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "3.12.1",
@@ -34,6 +36,7 @@
     "@vue/eslint-config-prettier": "5.1.0",
     "sass": "1.56.2",
     "sass-loader": "10.2.0",
+    "tailwindcss": "^3.4.6",
     "vue-template-compiler": "2.7.14"
   },
   "description": "A sample admin dashboard based on paper dashboard UI template",
