--- a/package.json
+++ b/package.json
@@ -2,52 +2,54 @@
   "name": "vue-paper-dashboard",
   "version": "1.0.1",
   "private": true,
+  "description": "A sample admin dashboard based on paper dashboard UI template",
+  "author": "cristian.jora <joracristi@gmail.com>",
   "scripts": {
-    "build": "vue-cli-service build",
-    "e2e": "node test/e2e/runner.js",
-    "lint": "vue-cli-service lint",
-    "lint-fix": "vue-cli-service lint --fix",
     "serve": "vue-cli-service serve --open",
-    "dev": "npm run serve"
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint",
+    "dev": "npm run serve",
+    "e2e": "node test/e2e/runner.js",
+    "lint-fix": "vue-cli-service lint --fix"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.2",
-    "@fortawesome/free-brands-svg-icons": "^6.5.2",
-    "@fortawesome/free-regular-svg-icons": "^6.5.2",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
-    "@fortawesome/vue-fontawesome": "^2.0.10",
-    "bootstrap": "4.6.2",
-    "chartist": "0.11.0",
-    "devextreme": "^22.1.3",
-    "devextreme-vue": "^22.1.3",
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/vue-fontawesome": "^3.0.8",
+    "autoprefixer": "^10.4.19",
+    "bootstrap": "5.3.3",
+    "chartist": "1.3.0",
+    "devextreme": "^24.1.3",
+    "devextreme-vue": "^24.1.3",
     "es6-promise": "4.2.8",
-    "eslint-plugin-vue": "^9.8.0",
-    "vue": "2.7.14",
+    "eslint-plugin-vue": "^9.27.0",
+    "postcss": "^8",
+    "tailwindcss": "^3",
+    "vue": "3.4.31",
     "vue-clickaway": "2.2.2",
-    "vue-notifyjs": "0.3.0",
-    "vue-router": "3.0.1",
+    "vue-notifyjs": "0.4.3",
+    "vue-router": "4.4.0",
     "vue-tailwind": "^2.5.1",
     "vuesax": "^3.12.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "3.12.1",
-    "@vue/cli-plugin-eslint": "3.12.1",
-    "@vue/cli-service": "3.12.1",
-    "@vue/eslint-config-prettier": "5.1.0",
-    "sass": "1.56.2",
-    "sass-loader": "10.2.0",
-    "tailwindcss": "^3.4.6",
-    "vue-template-compiler": "2.7.14"
-  },
-  "description": "A sample admin dashboard based on paper dashboard UI template",
-  "author": "cristian.jora <joracristi@gmail.com>",
-  "engines": {
-    "node": ">= 8.1.4",
-    "npm": ">= 5.0.0"
+    "@vue/cli-plugin-babel": "5.0.8",
+    "@vue/cli-plugin-eslint": "5.0.8",
+    "@vue/cli-service": "5.0.8",
+    "@vue/eslint-config-prettier": "9.0.0",
+    "sass": "1.77.8",
+    "sass-loader": "14.2.1",
+    "tailwindcss": "^3.4.6"
   },
   "browserslist": [
     "> 1%",
     "last 2 versions",
     "not ie <= 8"
-  ]
+  ],
+  "engines": {
+    "node": ">= 8.1.4",
+    "npm": ">= 5.0.0"
+  }
 }
