--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^2.0.10",
+    "autoprefixer": "^9.8.8",
     "bootstrap": "4.6.2",
     "chartist": "0.11.0",
     "devextreme": "^22.1.3",
     "devextreme-vue": "^22.1.3",
     "es6-promise": "4.2.8",
     "eslint-plugin-vue": "^9.8.0",
+    "postcss": "^7.0.39",
     "vue": "2.7.14",
     "vue-clickaway": "2.2.2",
     "vue-notifyjs": "0.3.0",
@@ -37,7 +39,7 @@
     "@vue/eslint-config-prettier": "5.1.0",
     "sass": "1.56.2",
     "sass-loader": "10.2.0",
-    "tailwindcss": "^3.4.12",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-template-compiler": "2.7.14"
   },
