--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-vue": "^9.8.0",
     "postcss": "^7.0.39",
     "vue": "2.7.14",
+    "vue-axios": "^3.5.2",
     "vue-clickaway": "2.2.2",
     "vue-notifyjs": "0.3.0",
     "vue-router": "3.0.1",
