--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/vue-fontawesome": "^2.0.10",
+    "all": "^0.0.0",
     "autoprefixer": "^9.8.8",
     "bootstrap": "4.6.2",
     "chartist": "0.11.0",
